# scikit-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
src/: project_name.cpp
tests/: test_basic.py
