[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.7.1",
    "cmake>=3.21",
    "scikit-build>=0.12",
]

build-backend = "setuptools.build_meta"

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
arithmetic_precedence_indication = true
split_before_logical_operator = true
